File Name: CHANGES

02/24/2014 FASP 1.4.4:
- Fix missing print information in Fortran wrapper.
- Fix a typo in test.c and test.f90.

02/01/2014 FASP 1.4.3:
- Fix a bug introduced in the previous version.
- Fix wront regression test results caused by -ffast-math.
- Fix several un-used variable warnings.
- Fix a bug due to disk failures. 
- Remove DEBUG_MODE setting from fasp.h and add it to Makefile.
- Add version tag to the current version.
- Update webpage and developer list.

01/18/2014 FASP 1.4.2:
- Add command line options for FASP functions.
- Report a bug in testbsr.c during ILU setup.
- Add input parameter check.
- Check auto-vectorization results: a few subroutines need to be fixed.
- Update TODO list and website.

12/27/2013 FASP 1.4.1:
- Fix a bug in ADD of CSR matrices.
- Fix a merge problem in HG.

12/25/2013 FASP 1.4.0:
- Check C1 criteria in CF splitting.
- Fix a bug in standard interpolation.
- Fix a typo in interpolation.
- Tested in UNCONG. 
- Modify VS08 and VS10 compiling parameters.
- Update FASP webpage and documentation.
- Update regression test results.

12/09/2013 FASP 1.3.8:
- Delete '' caused by '\n' in windows in the file graphic.c.
- Fix a relative path problem for MUMPS interface.
- Fix an OpenMP setting problem in VS08 x64 Release configuration.

11/17/2013 FASP 1.3.7:
- Add OpenMP versions to VS08 and VS10 solutions.
- Add more GCC versions to cmake list.
- Modify testomp.c according to the new OpenMP setting.
- Fix some warnings due to duplicate definitions in fasp.h.
- Update documentation: HTML and TeX.
- Fix a printing bug in io.c.
- Add plot function for BSR matrices. 

09/28/2013 FASP 1.3.6:
- Modify VS08 and VS10 dependency setup.
- Update stat script.
- Change Makefile default settings for release and debug versions.
- Add a reference manual generated by Doxygen.
- Revise the user guide.
- Proof read the user guide by Xiaozhe Hu.
- Change file name in test/main: testmm --> regression_mm.