@@ -40,7 +40,7 @@ void print_itinfo (const INT ptrlvl,
                    const REAL absres,
                    const REAL factor)
 {
-    if ( ptrlvl > PRINT_SOME ) {
+    if ( ptrlvl >= PRINT_SOME ) {
         
         if ( iter > 0 ) {
             printf("%6d | %13.6e   | %13.6e  | %10.4f\n",iter,relres,absres,factor);
