@@ -1,8 +1,10 @@
 File Name: CHANGES
 
-02/24/2014 FASP 1.4.4:
+02/26/2014 FASP 1.4.4:
 - Fix missing print information in Fortran wrapper.
 - Fix a typo in test.c and test.f90.
+- Add SuperLU to CMake.
+- Fix an initial parameter problem for iterative solvers.
 
 02/01/2014 FASP 1.4.3:
 - Fix a bug introduced in the previous version.
